fix background size and reduce vertical spacing between sections

--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -15,6 +15,7 @@ body {
     color: $violet;
     image: url("../images/bg-mobile.svg");
     repeat: no-repeat;
+    size: 100%;
   }
 }
 
@@ -29,7 +30,7 @@ body {
 .main {
   &-illustration {
     width: 100%;
-    margin: 50px 0;
+    margin: 25px 0;
     img {
       max-width: 100%;
       height: auto;
@@ -39,7 +40,7 @@ body {
   &-content {
     color: #ffffff;
     text-align: center;
-    margin-bottom: 75px;
+    margin-bottom: 50px;
     h1 {
       margin-bottom: 15px;
       font: {
@@ -89,7 +90,6 @@ body {
     height: 100vh;
     background: {
       image: url("../images/bg-desktop.svg"); //modified
-      size: cover; //added
     }
   }
   
